很好！经历了前面痛苦日记分析后，后面的功能跟稀的一样非常顺利！ 实现了使用百度地图API获得地点经纬度，并计算出地点哈希值最后保存数据库中